Fix some UI typos.

--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -862,7 +862,7 @@ User shouldn't see this.</property>
                             <child>
                               <widget class="GtkLabel" id="install-nodetect-label">
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Choose an operating systen type and version</property>
+                                <property name="label" translatable="yes">Choose an operating system type and version</property>
                               </widget>
                               <packing>
                                 <property name="position">1</property>
