--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -1229,11 +1229,40 @@
                                     <property name="orientation">vertical</property>
                                     <property name="spacing">3</property>
                                     <child>
-                                      <widget class="GtkLabel" id="label77">
+                                      <widget class="GtkHBox" id="hbox12">
                                         <property name="visible">True</property>
-                                        <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">&lt;b&gt;Volumes&lt;/b&gt;</property>
-                                        <property name="use_markup">True</property>
+                                        <property name="spacing">6</property>
+                                        <child>
+                                          <widget class="GtkLabel" id="label77">
+                                            <property name="visible">True</property>
+                                            <property name="xalign">0</property>
+                                            <property name="label" translatable="yes">&lt;b&gt;Volumes&lt;/b&gt;</property>
+                                            <property name="use_markup">True</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="fill">False</property>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkButton" id="pool-refresh">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="receives_default">True</property>
+                                            <signal name="clicked" handler="on_pool_refresh_clicked"/>
+                                            <child>
+                                              <widget class="GtkImage" id="image8">
+                                                <property name="visible">True</property>
+                                                <property name="stock">gtk-refresh</property>
+                                              </widget>
+                                            </child>
+                                          </widget>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="position">1</property>
+                                          </packing>
+                                        </child>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
