prefs: Attempt to clarify 'keyboard grab' option

--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -373,7 +373,7 @@ On mouse over</property>
                               <widget class="GtkLabel" id="label15">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Grab _keyboard input:</property>
+                                <property name="label" translatable="yes">Grab _keyboard accelerators:</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">prefs-console-keygrab</property>
                               </widget>
@@ -412,7 +412,7 @@ For all domains</property>
                     <child>
                       <widget class="GtkLabel" id="label1">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Consoles&lt;/b&gt;</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Graphical Consoles&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
                       </widget>
                       <packing>
