details: s/Host CPUs/Logical host CPUs/

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1878,7 +1878,7 @@ I/O:</property>
                                           <widget class="GtkLabel" id="label334">
                                             <property name="visible">True</property>
                                             <property name="xalign">1</property>
-                                            <property name="label" translatable="yes">Host CPUs:</property>
+                                            <property name="label" translatable="yes">Logical host CPUs:</property>
                                           </widget>
                                           <packing>
                                             <property name="top_attach">3</property>
