--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -345,13 +345,16 @@
               <widget class="GtkNotebook" id="vm-notebook">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="show_border">False</property>
+                <property name="tab_border">0</property>
+                <property name="tab_hborder">0</property>
+                <property name="tab_vborder">0</property>
                 <child>
                   <widget class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="hscrollbar_policy">automatic</property>
                     <property name="vscrollbar_policy">automatic</property>
-                    <property name="shadow_type">in</property>
                     <child>
                       <widget class="GtkTreeView" id="vm-list">
                         <property name="visible">True</property>
