engine: Use poweroff confirm setting before saving a VM

--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -579,7 +579,7 @@ For all domains</property>
                               <widget class="GtkLabel" id="label20">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Poweroff/_Reboot:</property>
+                                <property name="label" translatable="yes">Poweroff/_Reboot/Save:</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">prefs-confirm-poweroff</property>
                               </widget>
