--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -23,6 +23,28 @@
                 <child>
                   <widget class="GtkMenu" id="menuitem4_menu">
                     <child>
+                      <widget class="GtkImageMenuItem" id="menu_file_restore_saved">
+                        <property name="label" translatable="yes">Restore Saved Machine...</property>
+                        <property name="visible">True</property>
+                        <property name="tooltip" translatable="yes">Restore a saved machine from a filesystem image</property>
+                        <property name="use_underline">True</property>
+                        <property name="use_stock">False</property>
+                        <signal name="activate" handler="on_menu_restore_saved_activate"/>
+                        <accelerator key="r" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="image3">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-open</property>
+                          </widget>
+                        </child>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkSeparatorMenuItem" id="separator4">
+                        <property name="visible">True</property>
+                      </widget>
+                    </child>
+                    <child>
                       <widget class="GtkMenuItem" id="menu-file-view-manager">
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">_View Manager</property>
@@ -2023,7 +2045,7 @@ here</property>
                             <property name="tooltip" translatable="yes">Stop Interface</property>
                             <signal name="clicked" handler="on_interface_stop_clicked"/>
                             <child>
-                              <widget class="GtkImage" id="image3">
+                              <widget class="GtkImage" id="image5">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-cancel</property>
                               </widget>
@@ -2044,7 +2066,7 @@ here</property>
                             <property name="tooltip" translatable="yes">Delete Interface</property>
                             <signal name="clicked" handler="on_interface_delete_clicked"/>
                             <child>
-                              <widget class="GtkImage" id="image5">
+                              <widget class="GtkImage" id="image9">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-delete</property>
                               </widget>
