--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -1272,6 +1272,8 @@
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">True</property>
+                                            <property name="has_tooltip">True</property>
+                                            <property name="tooltip" translatable="yes">Refresh volume list</property>
                                             <signal name="clicked" handler="on_pool_refresh_clicked"/>
                                             <child>
                                               <widget class="GtkImage" id="image8">
